cv-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-service
  namespace: cv-namespace
spec:
  type: ClusterIP
  selector:
    app: cv-app
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 80
